feat: fetch country api and render

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <main>teste</main>
+    <main class="container">
+        <h1>Lista de países</h1>
+        <section id="country-container" class="container__section">
+
+        </section>
+    </main>
     <script src="index.js" type="module"></script>
 </body>
 </html>
